[project]
name = "litev"
version = "0.1.0"
description = "LiteV: A lightweight, extensible vetting/auditing system that scores text documents against rubrics using chunking and pluggable model providers."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.30.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
]
openai = ["openai>=1.0.0"]

[project.urls]
Homepage = "https://github.com/yourusername/litev"
Repository = "https://github.com/yourusername/litev.git"
Issues = "https://github.com/yourusername/litev/issues"

[project.scripts]
litev = "litev.__main__:main"
